[gd_scene format=3 uid="uid://d2kjnc6aamh1c"]

[ext_resource type="Script" uid="uid://rrmei3d8yi1d" path="res://Scripts/scene_transition.gd" id="1_j3iww"]

[sub_resource type="Animation" id="Animation_qbp82"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DissolveScreenLayer/DissolveScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_2l558"]
resource_name = "dissolve"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DissolveScreenLayer/DissolveScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_55sc7"]
_data = {
&"RESET": SubResource("Animation_qbp82"),
&"dissolve": SubResource("Animation_2l558")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6jix"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8dk2"]

[node name="SceneTransition" type="CanvasLayer" unique_id=1699172534]
script = ExtResource("1_j3iww")

[node name="DissolveScreenLayer" type="CanvasLayer" parent="." unique_id=2125338760]
layer = 4

[node name="DissolveScreen" type="ColorRect" parent="DissolveScreenLayer" unique_id=1397463294]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=418000583]
libraries/ = SubResource("AnimationLibrary_55sc7")

[node name="LoadingScreen" type="CanvasLayer" parent="." unique_id=1873330542]
visible = false

[node name="Background" type="ColorRect" parent="LoadingScreen" unique_id=360011257]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="LoadingScreen" unique_id=1413254360]
offset_left = 1010.0
offset_top = 684.0
offset_right = 1249.87
offset_bottom = 699.35
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_b6jix")
theme_override_styles/fill = SubResource("StyleBoxFlat_b8dk2")
show_percentage = false

[node name="ProgressPercentage" type="Label" parent="LoadingScreen" unique_id=1530673031]
offset_left = 1052.0
offset_top = 599.0
offset_right = 1207.0
offset_bottom = 682.75
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "0%"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="LoadingScreen" unique_id=398932815]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Press Any Button" type="Label" parent="LoadingScreen/CenterContainer" unique_id=201301838]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Pressione qualquer bot√£o"
